tests/parser/function-declaration-identifier-error2.lox
fn f(x, 5) {}
